# my-xtask-template

./: .rustfmt.toml  Cargo.toml  README.md  cargo-generate.toml  conditional-xtask-runtime.rhai  rust-toolchain.toml
.cargo/: config.toml
xtask/: Cargo.toml  main.rs  main_sync.rs  main_tokio.rs  task.rs  task_smol.rs  task_sync.rs  task_tokio.rs
